--- a/src/client/styles/Views/app.scss
+++ b/src/client/styles/Views/app.scss
@@ -1,26 +1,200 @@
-.top {
-  height: 5%;
-  width: 100%;
-  top: 0;
-  background-color: rgb(55, 52, 52);
-}
+@use 'base/index.scss' as *;
 
-.footer {
-  height: 5%;
-  width: 100%;
-  bottom: 0px;
-  background-color: rgb(55, 52, 52);
+.container {
+  margin: 3px 10px 13px 10px;
+  height: 97.5%;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
 }
 
 .content {
+  min-height: 20%;
+  flex-grow: 1;
   text-align: center;
-  margin: 10px;
-  height: 96vh;
-  position: relative;
-  background-color: rgb(198, 190, 190);
-  z-index: 1;
-  padding-left: 10%;
-  padding-right: 10%;
-  border-radius: 20%;
+  border-radius: 5px;
+  border: 1px dashed black;
+  background-color: $inputColor;
+  animation: rotate 10s linear infinite reverse;
+  animation-timing-function: ease-in;
+}
+
+.inputText {
+  height: 100%;
+  font-size: 1em;
+  font-family: R-regular;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  animation: textBlink 4s infinite linear;
+}
+
+.loadedSection {
+  margin-top: 5px;
+  border: 0.5px solid $clipsBorder;
+  border-radius: 3px;
   overflow: hidden;
+  display: flex;
+  flex-direction: column;
+}
+
+.clipDetails{
+  height: 100%;
+  border-radius: 3px;
+  overflow: scroll;
+  text-align: center;
+  justify-content: center;
+
+  .singleClip {
+    display: flex;
+    min-height: 3.5em;
+    flex-direction: row;
+    font-size: 0.8em;
+    text-align: center;
+    text-align: left;
+    align-items: center;
+    border-bottom: 0.5px solid $clipsBorder;
+
+    .cancleBtn {
+      background: url('../images/cancel.svg') center no-repeat;
+      min-height: 2em;
+      align-items: center;
+      flex-grow: 1.2;
+    }
+
+    .size {
+      flex-grow: 2;
+      display: flex;
+      flex-direction: row;
+      align-content: center;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .convertBtn {
+      flex-grow: 0.5;
+    }
+
+    .clip {
+      font-weight: bold;
+      font-size: .9em;
+      display: flex;
+      flex-direction: column;
+      flex-grow: 3;
+
+      .clipDuration {
+        font-style: italic;
+      }
+    }
+  }
+}
+
+.cancleBtn {
+  background-color: red;
+  fill: red;
+  color: red;
+}
+
+.clipsFooter {
+  padding: 0.3em 0 0.3em 0;
+  display: flex;
+  align-content: flex-start;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+  border-top: 0.5px solid $clipsBorder;
+
+  & > span {
+    font-family: R-semiBold;
+    font-size: 0.8em;
+    opacity: 0.8;
+    padding: 3px;
+  }
+}
+
+.btn {
+
+  &--red {
+    @include btn-config;
+    background-color: $red;
+    color: white;
+
+    &:hover{
+      background-color: $hoverRed;
+      cursor: pointer;
+    }
+  }
+  
+  &--green {
+    @include btn-config;
+    background-color: $green;
+    color: white;
+    
+    &:hover{
+      background-color: $hoverGreen;
+      cursor: pointer;
+    }
+  }
+}
+
+input {
+  height: 1.2em;
+  width: 3em;
+  border-radius: 3px;
+  margin:  0em 0.5em 0em 0.5em;
+  border: none;
+  padding: 5px;
+  outline: none;
+  background-color: $inputColor;
+  align-self: center;
+}
+
+
+
+
+@keyframes rotate {
+  0%,
+  4% {
+    transform: rotate(1deg);
+  }
+  1%,
+  3%,
+  5%,
+  7% {
+    transform: rotate(-1deg);
+  }
+  2%,
+  6% {
+    transform: rotate(2deg);
+  }
+  8% {
+    transform: rotate(0deg);
+  }
+}
+
+@keyframes textBlink {
+  0%,
+  100% {
+    transform: scale(0.98);
+    opacity: 0.9;
+  }
+  50% {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
+@keyframes jumpingText {
+  0% {
+    transform: translateY(-50px) scale(0.98);
+    opacity: 0.7;
+  }
+  40% {
+    transform: translateY(0px);
+    opacity: 0.9;
+  }
+  70% {
+    transform: translateY(-22px);
+    opacity: 0.7;
+  }
 }
