--- a/src/client/styles/base/index.scss
+++ b/src/client/styles/base/index.scss
@@ -1,11 +1,35 @@
-body {
+@import '../fonts/fonts.scss';
+
+$bgColor: rgb(177, 170, 170);
+$inputColor: rgb(198, 190, 190);
+$clipsBorder: rgb(186, 178, 178);
+$red: rgb(94, 37, 37);
+$hoverRed: rgb(128, 3, 3);
+$green: #2d4137;
+$hoverGreen: #035e30;
+
+html,
+body,
+#root,
+.routes {
+  top:0;
+  bottom: 0;
   width: 100%;
   margin: 0px;
   padding: 0px;
-  height: 100vh;
-  background-color: rgb(55, 52, 52);
+  height: 100%;
+  overflow: hidden;
+  background-color: $bgColor;
+  font-family: R-regular;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+
+@mixin btn-config {
+  border: 1px solid rgb(206, 201, 201);
+  border-radius: 3px;
+  min-width: 8em;
+  height: 1.3em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
