--- a/src/client/styles/Views/app.scss
+++ b/src/client/styles/Views/app.scss
@@ -49,6 +49,7 @@
   overflow: scroll;
   text-align: center;
   justify-content: center;
+  z-index: 0;
 
   .singleClip {
     display: flex;
@@ -59,6 +60,9 @@
     text-align: left;
     align-items: center;
     border-bottom: 0.5px solid $clipsBorder;
+    z-index: -2;
+    background: none;
+    // opacity: 0;
 
     &:hover {
       border-left: 1.3px solid green;
@@ -74,8 +78,19 @@
       opacity: 0.4;
 
       &:hover {
-        opacity: 1;
+        opacity: 2;
       }
+
+    }
+    
+    progress {
+      position: absolute;
+      height: 42px;
+      width: 95.6%;
+      z-index: -1;
+      border-radius: 4px;
+      opacity: 0.3;
+      padding: 0;
     }
 
     .progress {
